# stGP

./: LICENSE  README.md  pyproject.toml  stGP.yml
FigureReproducing/: Fig2_simulation.ipynb  Fig3_human_brain_ext.ipynb  Fig5_mouse_brain.ipynb  Fig6_injured_kidney.ipynb  plot.py
RealData_HumanBrainMERFISH/: HumanBrain_ext.ipynb  HumanBrain_oli.ipynb  benchmarking_ext.py  plots.py  preprocess_qc.py  utils.py
RealData_MouseBrainMERFISH/: 01_preprocess_qc.py  MouseBrain_downstream.ipynb  MouseBrain_microglia.ipynb  MouseBrain_proximity_enrich.ipynb  cluster_Microglia.ipynb  downstream_cluster_Microglia.ipynb  plots.py  utils.py
RealData_MouseKidneyXenium/: 01_preprocess.ipynb  Inj_PT_L.ipynb  Inj_PT_R.ipynb  fibroblast_L.ipynb  fibroblast_R.ipynb  immune_L.ipynb  immune_R.ipynb  immune_kernel_robustness_summary.ipynb  plots.py  pseudotime_Inj_PT_L.ipynb  run_immune_kernel_robustness.py
Simulation/: README.md  SpatialPCA.py  benchmark_utils.py  generation.py  metrics_utils.py  plot_utils.py  simu_gaussian.py
stgp/: README.md  __init__.py  estimation.py  kernels.py  preprocessing.py
stgp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
